# spec

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SPEC.md  agentOS.yaml  pyproject.toml
.github/workflows/: publish.yml
bootstrap/: __init__.py  agentOS.yaml  apply.py  apps.py  board.py  cli.py  github_token.py  labels.py  state.py  upgrade.py  verify.py  workflows.py
bootstrap/schema/: agentOS.schema.json  field-bindings.schema.json  run-record.schema.json
bootstrap/templates/: AGENTS.md
bootstrap/templates/agents/_shared/: loop.md  telemetry.md
bootstrap/templates/workflows/: agent-settlement.yml
docs/: agent-roles.md  diy-agentos.md  getting-started.md  label-model.md  metrics-schema.md  plugins.md  uninstall.md
plugins/: README.md
plugins/three-questions/: plugin.yaml
plugins/three-questions/workflows/: watcher-schedule.yml
schema/: agentOS.schema.json  field-bindings.schema.json  project-rules.schema.json  run-record.schema.json
scripts/: __init__.py  cost_rates.py  metrics.py  model_rates.yml  projector.py  promote_ready.py  publish_record.py  run_record.py
templates/: AGENTS.md  config.yaml.example
templates/agents/_shared/: context-management.md  escalation.md
templates/agents/builder/: AGENT.md.template
templates/agents/docs/: AGENT.md.template
templates/agents/planner/: AGENT.md.template
templates/agents/reviewer/: AGENT.md.template
templates/agents/watcher/: AGENT.md.template
templates/workflows/: agent-orchestrator.yml  detect-run-failure.yml  run-receipt.yml
tests/: __init__.py  test_apply_dry_run_state.py  test_board.py  test_bootstrap.py  test_gaps.py  test_labels.py  test_release_consistency.py
tests/fixtures/: sample-agentOS.yaml  sample-run-record-v6.jsonl
(+5 files in other folders)
